feat: complete testing suites, JMeter load tests, full-stack Dockerization, Prometheus/Grafana observability, GitHub Actions CI/CD, and AWS ECS Fargate blueprints